2007-04-01  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for no double instance run.
	Now by default GCompris won't run again if started less than 30
	seconds after a previous one.
	This can be disable with --nolockcheck

	* src/gcompris/gcompris.c: (main):

2007-03-30  Bruno coudoin  <bruno.coudoin@free.fr>

	Added Indonesian voices by Dessy Widyasari - cidut_dsy on yahoo : com

	* boards/sounds/id/*:

2007-03-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: Added missing files.

2007-03-27  Yves Combe <yves@ycombe.net>

	add a missing file.

	* macosx/GCompris.icns:

2007-03-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed missing translation of the country map names.

	* boards/geography_country/board1_0.xml.in:
	* boards/geography_country/board3_0.xml.in:
	* boards/geography_country/board4_0.xml.in:
	* boards/geography_country/board5_0.xml.in:
	* boards/geography_country/board5_1.xml.in:
	* boards/geography_country/board5_2.xml.in:
	* boards/imagename/board5_0.xml.in:

2007-03-27  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2007-03-27  Yves Combe <yves@ycombe.net>

	add a --without-readlines option to gnuchess, to fix a crash from it on osx.

	* macosx/build-gtk.sh:

2007-03-27  Yves Combe <yves@ycombe.net>

	Add initials CFLAGS to OBJCFLAGS. Usefull for universal binary.

	* configure.in:

2007-03-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Added missing translation strings.

	* src/boards/click_on_letter.c: (config_start):
	* src/boards/colors.c: (colors_config_start):
	* src/boards/gletters.c: (gletter_config_start):
	* src/boards/imageid.c: (config_start):
	* src/boards/missingletter.c: (config_start):
	* src/boards/reading.c: (reading_config_start):
	* src/boards/scale.c: (config_start):
	* src/boards/shapegame.c: (config_start):
	* src/boards/smallnumbers.c: (smallnumber_config_start):

2007-03-27  Bruno coudoin  <bruno.coudoin@free.fr>
