@@ -1,3 +1,10 @@
+2007-04-01  Yves Combe <yves@ycombe.net>
+
+	interact with NS main menu. untested yet.
+
+	* configure.in:
+	* src/gcompris/gcompris-nsbundle.m:
+
 2007-04-01  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Added support for no double instance run.
